# licode

./: .gitignore  .travis.yml  README.md  karma.conf.js  licode_config.js.erb  licode_config.js.test  licode_config.js.vagrant  package.json
erizo/: buildProject.sh
erizo/src/erizo/: CMakeLists.txt  SdpInfo.cpp  SrtpChannel.cpp  Transport.h  WebRtcConnection.cpp  WebRtcConnection.h
erizo/src/erizo/media/: ExternalOutput.cpp  ExternalOutput.h  MediaProcessor.cpp
erizo/src/erizo/rtp/: RtcpProcessor.cpp  RtcpProcessor.h
erizo/src/erizo/rtp/webrtc/: common_types.h  typedefs.h
erizo/src/erizo/rtp/webrtc/base/: scoped_ptr.h  scoped_ref_ptr.h  template_util.h  thread_annotations.h
erizo/src/erizo/rtp/webrtc/common_video/: rotation.h
erizo/src/erizo/rtp/webrtc/modules/interface/: module.h  module_common_types.h
erizo/src/erizo/rtp/webrtc/modules/rtp_rtcp/interface/: fec_receiver.h  receive_statistics.h  rtp_rtcp.h  rtp_rtcp_defines.h
erizo/src/erizo/rtp/webrtc/modules/rtp_rtcp/source/: bitrate.h  byte_io.h  fec_private_tables_bursty.h  fec_private_tables_random.h  fec_receiver_impl.cc  fec_receiver_impl.h  rtp_header_extension.h  rtp_receiver_strategy.h  rtp_receiver_video.h  rtp_rtcp_config.h  rtp_utility.h
erizo/src/erizo/rtp/webrtc/system_wrappers/interface/: atomic32.h  clock.h  critical_section_wrapper.h  logging.h  ref_count.h  rw_lock_wrapper.h  tick_util.h
erizoAPI/: WebRtcConnection.cc  WebRtcConnection.h  binding.gyp  build.sh
erizo_controller/: .gitignore  initErizo_agent.sh  initErizo_controller.sh  installErizo_controller.sh  log4js_configuration.json.erb
erizo_controller/erizoAgent/: erizoAgent.js  log4cxx.properties  log4cxx.properties.erb
erizo_controller/erizoClient/src/: Connection.js  Room.js
erizo_controller/erizoClient/src/webrtc-stacks/: ChromeStableStack.js
erizo_controller/erizoClient/tools/: compileDebug.sh
erizo_controller/erizoController/: erizoController.js
erizo_controller/erizoController/rpc/: rpcPublic.js
erizo_controller/erizoJS/: erizoJSController.js
extras/basic_example/: basicServer.js
extras/basic_example/public/: connection_test.js  index.html  script.js
extras/vagrant/: bootstrap.sh
nuve/: installNuve.sh
nuve/nuveAPI/resource/: roomsResource.js
scripts/: initLicode.sh  installBasicExample.sh  installCentOsDeps.sh  installCentOsDepsUnattended.sh  installErizo.sh  installLinuxDependencies.sh  installMacDeps.sh  installTravisDeps.sh  licode_default.js
test/: config-test.js  erizo-test.js  karma.conf.js
